ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-homolog" # PROD letsencrypt-prod
    ingress.kubernetes.io/force-ssl.redirect: "true"
spec:
  tls: 
  - hosts: 
    - "staging.api.cherry-go.com"
    secretName: "staging-api-cherry-go-tls"
  - hosts: 
    - "staging.painel.cherry-go.com"
    secretName: "staging-painel-cherry-go-tls"
  rules:
  - host: staging.api.cherry-go.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cherry-go-api-service
            port: 
              number: 80
  - host: staging.painel.cherry-go.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cherry-go-backoffice-service
            port: 
              number: 80
